# gm2d3

./: CMakeLists.txt  LICENSE  Makefile  README.md  gm2d3  vim-session
cmake/: FindConfig++.cmake  gm2d3_version.h.in
configs/: fake.cfg  rpi_prototype.cfg
include/: gm2d3.h  gm2d3_auto_controller.h  gm2d3_const.h  gm2d3_const.h.orig  gm2d3_fake_controller.h  gm2d3_fake_controller.h.orig  gm2d3_fltk_util.h  gm2d3_manual_controller.h  gm2d3_manual_controller.h.orig  gm2d3_options.h  gm2d3_options.h.orig  gm2d3_rpi_controller.h  gm2d3_stage_controller.h  gm2d3_stage_diagnostics.h  gm2d3_util.h  gm2d3_util.h.orig  gm2d3_version.h  gm2d3_window.h  gm2d3_window.h.orig  termcolor.hpp
src/: Cartesian.cpp  gm2d3.cpp  gm2d3.cpp.orig  gm2d3.cpp.orig.orig  gm2d3.h  gm2d3_auto_controller.cpp  gm2d3_auto_controller.cpp.orig  gm2d3_auto_controller.h  gm2d3_const.cpp  gm2d3_const.h  gm2d3_fake_controller.cpp  gm2d3_fake_controller.cpp.orig  gm2d3_fltk_util.cpp  gm2d3_manual_controller.cpp  gm2d3_manual_controller.cpp.orig  gm2d3_manual_controller.h  gm2d3_options.cpp  gm2d3_options.cpp.orig  gm2d3_options.h  gm2d3_rpi_controller.cpp  gm2d3_rpi_controller.cpp.orig  gm2d3_rpi_controller.h  gm2d3_stage.cpp  gm2d3_stage.h  gm2d3_stage_controller.cpp  gm2d3_stage_controller.cpp.orig  gm2d3_stage_diagnostics.cpp  gm2d3_stage_diagnostics.h  gm2d3_stage_plot.cpp  gm2d3_stage_plot.h  gm2d3_util.cpp  gm2d3_window.cpp  gm2d3_window.h  main.cpp
